# SchneRT

./: .gitignore  Bezier.cpp  Bezier.h  CMakeLists.txt  Canvas.cpp  Canvas.h  Gauss.cpp  LICENSE  LimitedObject.cpp  LimitedObject.h  Makefile  Object.cpp  Object.h  Plane.cpp  Plane.h  README.md  Stage.cpp  Stage.h  main.cpp  scene.txt  smallppm.cpp  utils.h
png++/: error.hpp
result/: input.txt  stage.txt
src/: Bezier.cpp  Bezier.h  CMakeLists.txt  Canvas.cpp  Gauss.h  LimitedObject.cpp  LimitedObject.h  Object.cpp  Object.h  Plane.cpp  Plane.h  Stage.cpp  utils.h
